--- a/Weather_app.vcxproj.filters
+++ b/Weather_app.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="weather_client.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Weather_parser.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="config.txt">
