--- a/Weather_app.vcxproj
+++ b/Weather_app.vcxproj
@@ -133,6 +133,9 @@
     <ClInclude Include="Headers\weather_client.h" />
     <ClInclude Include="Headers\Weather_parser.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
