--- a/Weather_app.vcxproj.filters
+++ b/Weather_app.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt">
+      <Filter>Файлы заголовков</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
